first line and delete button align corrected

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7089,4 +7089,21 @@ input[type="checkbox"] {
 }
 
 .remove {margin: 0.5em;
+    float: right;
+}
+
+.formbox {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 2px 4px 8px 2px rgba(0,0,0,0.2);
+    transition: 0.1s;
+    margin: 2em;
+    margin-left: 70px;
+    padding: 0.5em;
+    float:left;
+    width:250px;
+    height:150px;
+}
+
+.formbox:hover {
+    box-shadow: 4px 8px 16px 4px rgba(0,0,0,0.2);
 }
